cmake_minimum_required(VERSION 3.15)
project(xv6)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(xv6
        .cvsignore
        .dir-locals.el
        .gdbinit.tmpl
        .gitignore
        asm.h
        bio.c
        bio.d
        bio.o
        bootasm.d
        bootasm.o
        bootasm.S
        bootblock
        bootblock.asm
        bootblock.o
        bootblockother.o
        bootmain.c
        bootmain.d
        bootmain.o
        buf.h
        BUGS
        cat.c
        console.c
        console.d
        console.o
        cuth
        date.h
        defs.h
        dot-bochsrc
        echo.c
        elf.h
        entry.o
        entry.S
        entryother
        entryother.asm
        entryother.d
        entryother.o
        entryother.S
        exec.c
        exec.d
        exec.o
        fcntl.h
        file.c
        file.d
        file.h
        file.o
        forktest.c
        fs.c
        fs.d
        fs.h
        fs.o
        gdbutil
        grep.c
        ide.c
        ide.d
        ide.o
        init.c
        initcode
        initcode.asm
        initcode.d
        initcode.o
        initcode.out
        initcode.S
        ioapic.c
        ioapic.d
        ioapic.o
        kalloc.c
        kalloc.d
        kalloc.o
        kbd.c
        kbd.d
        kbd.h
        kbd.o
        kernel
        kernel.asm
        kernel.ld
        kernel.sym
        kill.c
        lapic.c
        lapic.d
        lapic.o
        LICENSE
        ln.c
        log.c
        log.d
        log.o
        ls.c
        main.c
        main.d
        main.o
        Makefile
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.d
        mp.h
        mp.o
        Notes
        param.h
        picirq.c
        picirq.d
        picirq.o
        pipe.c
        pipe.d
        pipe.o
        pr.pl
        printf.c
        printpcs
        proc.c
        proc.d
        proc.h
        proc.o
        README
        rm.c
        runoff
        runoff.list
        runoff.spec
        runoff1
        sh.c
        show1
        sign.pl
        sleep1.p
        sleeplock.c
        sleeplock.d
        sleeplock.h
        sleeplock.o
        spinlock.c
        spinlock.d
        spinlock.h
        spinlock.o
        spinp
        stat.h
        stressfs.c
        string.c
        string.d
        string.o
        swtch.o
        swtch.S
        syscall.c
        syscall.d
        syscall.h
        syscall.o
        sysfile.c
        sysfile.d
        sysfile.o
        sysproc.c
        sysproc.d
        sysproc.o
        toc.ftr
        toc.hdr
        trap.c
        trap.d
        trap.o
        trapasm.o
        trapasm.S
        traps.h
        TRICKS
        types.h
        uart.c
        uart.d
        uart.o
        ulib.c
        umalloc.c
        user.h
        usertests.c
        usys.S
        vectors.o
        vectors.pl
        vectors.S
        vm.c
        vm.d
        vm.o
        wc.c
        x86.h
        xv6.img
        zombie.c)
